add resume image, edit layout of about me and home pages

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -16,12 +16,10 @@
                 <li class="navbar-listitems"><a href="/pages/home.html">Home</a></li>
             </ul>
         </div>
-    <h1 id="top-header"></h1>
-
     <div class="about-me">
       <h2 id="about-me-header">about me</h2>
       <img
-        src="images/_LEE6139.jpg"
+        src="/images/_LEE6139.jpg"
         alt="Nolan Ratsabouth"
         width="300px"
         height:auto
