--- a/pages/home.html
+++ b/pages/home.html
@@ -23,10 +23,10 @@
         <h1 id="top-header"></h1>
         
         <div class="links"  id="links">
-            <a href="https://www.linkedin.com/in/nolan-ratsabouth-2a5863264/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-black-logo-icon.png" width="55px"></a>
-            <a href="https://github.com/nolanrats" target="_blank" rel="noopener noreferrer"><img src="images/github-logo.png" width="55px"></a>
-            <a href="https://docs.google.com/document/d/1Q-3r7VDYK3HCV-_s-PR0RPxDjb2c3PEhohcDcPmU1qI/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
-            <a href="mailto:ratsanolan14@gmail.com"><img src="images/email-icon.png" width="55px" id="email-link"></a>
+            <a href="https://www.linkedin.com/in/nolan-ratsabouth-2a5863264/" target="_blank" rel="noopener noreferrer"><img src="/images/linkedin-black-logo-icon.png" width="55px"></a>
+            <a href="https://github.com/nolanrats" target="_blank" rel="noopener noreferrer"><img src="/images/github-logo.png" width="55px"></a>
+            <a href="https://docs.google.com/document/d/1Q-3r7VDYK3HCV-_s-PR0RPxDjb2c3PEhohcDcPmU1qI/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><img src="/images/resume.png" width="55px"></a>
+            <a href="mailto:ratsanolan14@gmail.com"><img src="/images/email-icon.png" width="55px" id="email-link"></a>
         </div>
     </body>
 </html>
