edit subheading in hero

--- a/home.html
+++ b/home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nolan Ratsabouth</title>
-    <link rel="stylesheet" href="/styles.css" />
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" defer></script>
   </head>
 
   <body>
     <div class="navbar">
       <div class="navbar-left">
-        <a href="/pages/home.html" class="navbar-brand">Nolan Ratsabouth</a>
+        <a href="home.html" class="navbar-brand">Nolan Ratsabouth</a>
       </div>
       <div class="navbar-right">
         <ul id="navbar">
@@ -43,7 +43,7 @@
             </div>
 
             <div class="hero-subheading">
-                <p id="subheading">Aspiring software engineer at UTD!</p>
+                <p id="subheading">Aspiring Software Engineer -- Junior CS @ UTD</p>
             </div>
             
             <div class="hero-cta">
@@ -61,7 +61,7 @@
         <h2 id="about-me-header">About Me</h2>
         <div class="about-content">
           <img
-            src="/images/profile-pic.png"
+            src="images/profile-pic.png"
             alt="Nolan Ratsabouth"
             id="profile-pic"
           />
@@ -108,7 +108,7 @@
               <h3>Upcoming Project - Tennis Shot Classifier</h3>
               <div class="project-links">
                 <a href="https://github.com/nolanrats/tennis-shot-classifier" target="_blank" class="github-link" title="View on GitHub">
-                  <img src="/images/github-logo.png" alt="GitHub" />
+                  <img src="images/github-logo.png" alt="GitHub" />
                 </a>
               </div>
             </div>
@@ -129,7 +129,7 @@
               <h3>Eye Dropper Chrome Extension</h3>
               <div class="project-links">
                 <a href="https://github.com/nolanrats/eye-dropper-extension" target="_blank" class="github-link" title="View on GitHub">
-                  <img src="/images/github-logo.png" alt="GitHub" />
+                  <img src="images/github-logo.png" alt="GitHub" />
                 </a>
               </div>
             </div>
@@ -149,7 +149,7 @@
               <h3>Personal Portfolio</h3>
               <div class="project-links">
                 <a href="https://github.com/nolanrats/Personal-Portfolio" target="_blank" class="github-link" title="View on GitHub">
-                  <img src="/images/github-logo.png" alt="GitHub" />
+                  <img src="images/github-logo.png" alt="GitHub" />
                 </a>
               </div>
             </div>
@@ -214,7 +214,7 @@
             class="social-link"
             title="LinkedIn"
           >
-            <img src="/images/linkedin-black-logo-icon.png" alt="LinkedIn" />
+            <img src="images/linkedin-black-logo-icon.png" alt="LinkedIn" />
             <span>LinkedIn</span>
           </a>
           <a
@@ -224,7 +224,7 @@
             class="social-link"
             title="GitHub"
           >
-            <img src="/images/github-logo.png" alt="GitHub" />
+            <img src="images/github-logo.png" alt="GitHub" />
             <span>GitHub</span>
           </a>
           <a
@@ -234,7 +234,7 @@
             class="social-link"
             title="Resume"
           >
-            <img src="/images/resume.png" alt="Resume" />
+            <img src="images/resume.png" alt="Resume" />
             <span>Resume</span>
           </a>
           <a 
@@ -242,7 +242,7 @@
             class="social-link"
             title="Email"
           >
-            <img src="/images/email-icon.png" alt="Email" />
+            <img src="images/email-icon.png" alt="Email" />
             <span>Email</span>
           </a>
         </div>
